cpp/c-api/include/dnv/vista/sdk/c/transport/datachannel/data_channel.h

    typedef struct dnv_vista_sdk_dcl_restriction dnv_vista_sdk_dcl_restriction_t;
    typedef struct dnv_vista_sdk_dcl_range dnv_vista_sdk_dcl_range_t;
    typedef struct dnv_vista_sdk_dcl_format dnv_vista_sdk_dcl_format_t;
    typedef struct dnv_vista_sdk_dcl_data_channel_type dnv_vista_sdk_dcl_data_channel_type_t;
    typedef struct dnv_vista_sdk_dcl_name_object dnv_vista_sdk_dcl_name_object_t;
    typedef struct dnv_vista_sdk_dcl_unit dnv_vista_sdk_dcl_unit_t;
    typedef struct dnv_vista_sdk_dcl_property dnv_vista_sdk_dcl_property_t;
    typedef struct dnv_vista_sdk_dcl_configuration_reference dnv_vista_sdk_dcl_configuration_reference_t;
    DNV_VISTA_SDK_C_API dnv_vista_sdk_dcl_format_t* dnv_vista_sdk_dcl_format_create(const char* type);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_format_free(dnv_vista_sdk_dcl_format_t* format);
    DNV_VISTA_SDK_C_API const char* dnv_vista_sdk_dcl_format_type(const dnv_vista_sdk_dcl_format_t* format);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_format_set_type(dnv_vista_sdk_dcl_format_t* format, const char* type);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_dcl_restriction_t* dnv_vista_sdk_dcl_format_restriction(
        const dnv_vista_sdk_dcl_format_t* format);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_format_set_restriction(
        dnv_vista_sdk_dcl_format_t* format, const dnv_vista_sdk_dcl_restriction_t* restriction);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_format_clear_restriction(dnv_vista_sdk_dcl_format_t* format);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_format_validate_value(
        const dnv_vista_sdk_dcl_format_t* format, const char* value, dnv_vista_sdk_iso19848_value_t** parsedValue);
    DNV_VISTA_SDK_C_API dnv_vista_sdk_dcl_data_channel_type_t* dnv_vista_sdk_dcl_data_channel_type_create(
        const char* type);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_data_channel_type_free(dnv_vista_sdk_dcl_data_channel_type_t* dct);
    DNV_VISTA_SDK_C_API const char* dnv_vista_sdk_dcl_data_channel_type_type(
        const dnv_vista_sdk_dcl_data_channel_type_t* dct);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_data_channel_type_set_type(
        dnv_vista_sdk_dcl_data_channel_type_t* dct, const char* type);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_data_channel_type_has_update_cycle(
        const dnv_vista_sdk_dcl_data_channel_type_t* dct);
    DNV_VISTA_SDK_C_API double dnv_vista_sdk_dcl_data_channel_type_update_cycle(
        const dnv_vista_sdk_dcl_data_channel_type_t* dct);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_data_channel_type_set_update_cycle(
        dnv_vista_sdk_dcl_data_channel_type_t* dct, double value);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_data_channel_type_clear_update_cycle(
        dnv_vista_sdk_dcl_data_channel_type_t* dct);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_data_channel_type_has_calculation_period(
        const dnv_vista_sdk_dcl_data_channel_type_t* dct);
    DNV_VISTA_SDK_C_API double dnv_vista_sdk_dcl_data_channel_type_calculation_period(
        const dnv_vista_sdk_dcl_data_channel_type_t* dct);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_data_channel_type_set_calculation_period(
        dnv_vista_sdk_dcl_data_channel_type_t* dct, double value);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_data_channel_type_clear_calculation_period(
        dnv_vista_sdk_dcl_data_channel_type_t* dct);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_data_channel_type_is_alert(
        const dnv_vista_sdk_dcl_data_channel_type_t* dct);
    DNV_VISTA_SDK_C_API dnv_vista_sdk_dcl_name_object_t* dnv_vista_sdk_dcl_name_object_create_default(void);
    DNV_VISTA_SDK_C_API dnv_vista_sdk_dcl_name_object_t* dnv_vista_sdk_dcl_name_object_create(const char* namingRule);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_name_object_free(dnv_vista_sdk_dcl_name_object_t* nameObject);
    DNV_VISTA_SDK_C_API const char* dnv_vista_sdk_dcl_name_object_naming_rule(
        const dnv_vista_sdk_dcl_name_object_t* nameObject);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_name_object_set_naming_rule(
        dnv_vista_sdk_dcl_name_object_t* nameObject, const char* namingRule);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_serializable_document_t* dnv_vista_sdk_dcl_name_object_custom_name_objects(
        const dnv_vista_sdk_dcl_name_object_t* nameObject);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_name_object_set_custom_name_objects(
        dnv_vista_sdk_dcl_name_object_t* nameObject, dnv_vista_sdk_serializable_document_t* value);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_name_object_clear_custom_name_objects(
        dnv_vista_sdk_dcl_name_object_t* nameObject);
    DNV_VISTA_SDK_C_API dnv_vista_sdk_dcl_unit_t* dnv_vista_sdk_dcl_unit_create(const char* unitSymbol);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_unit_free(dnv_vista_sdk_dcl_unit_t* unit);
    DNV_VISTA_SDK_C_API const char* dnv_vista_sdk_dcl_unit_unit_symbol(const dnv_vista_sdk_dcl_unit_t* unit);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_unit_set_unit_symbol(
        dnv_vista_sdk_dcl_unit_t* unit, const char* unitSymbol);
    DNV_VISTA_SDK_C_API const char* dnv_vista_sdk_dcl_unit_quantity_name(const dnv_vista_sdk_dcl_unit_t* unit);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_unit_set_quantity_name(
        dnv_vista_sdk_dcl_unit_t* unit, const char* quantityName);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_unit_clear_quantity_name(dnv_vista_sdk_dcl_unit_t* unit);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_unit_set_custom_elements(
        dnv_vista_sdk_dcl_unit_t* unit, dnv_vista_sdk_serializable_document_t* value);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_unit_clear_custom_elements(dnv_vista_sdk_dcl_unit_t* unit);
    DNV_VISTA_SDK_C_API dnv_vista_sdk_dcl_property_t* dnv_vista_sdk_dcl_property_create(
        const dnv_vista_sdk_dcl_data_channel_type_t* dataChannelType, const dnv_vista_sdk_dcl_format_t* format);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_property_free(dnv_vista_sdk_dcl_property_t* property);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_dcl_data_channel_type_t* dnv_vista_sdk_dcl_property_data_channel_type(
        const dnv_vista_sdk_dcl_property_t* property);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_property_set_data_channel_type(
        dnv_vista_sdk_dcl_property_t* property, const dnv_vista_sdk_dcl_data_channel_type_t* dataChannelType);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_dcl_format_t* dnv_vista_sdk_dcl_property_format(
        const dnv_vista_sdk_dcl_property_t* property);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_property_set_format(
        dnv_vista_sdk_dcl_property_t* property, const dnv_vista_sdk_dcl_format_t* format);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_dcl_range_t* dnv_vista_sdk_dcl_property_range(
        const dnv_vista_sdk_dcl_property_t* property);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_property_set_range(
        dnv_vista_sdk_dcl_property_t* property, const dnv_vista_sdk_dcl_range_t* range);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_property_clear_range(dnv_vista_sdk_dcl_property_t* property);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_dcl_unit_t* dnv_vista_sdk_dcl_property_unit(
        const dnv_vista_sdk_dcl_property_t* property);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_property_set_unit(
        dnv_vista_sdk_dcl_property_t* property, const dnv_vista_sdk_dcl_unit_t* unit);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_property_clear_unit(dnv_vista_sdk_dcl_property_t* property);
    DNV_VISTA_SDK_C_API const char* dnv_vista_sdk_dcl_property_quality_coding(
        const dnv_vista_sdk_dcl_property_t* property);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_property_set_quality_coding(
        dnv_vista_sdk_dcl_property_t* property, const char* qualityCoding);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_property_clear_quality_coding(dnv_vista_sdk_dcl_property_t* property);
    DNV_VISTA_SDK_C_API const char* dnv_vista_sdk_dcl_property_alert_priority(
        const dnv_vista_sdk_dcl_property_t* property);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_property_set_alert_priority(
        dnv_vista_sdk_dcl_property_t* property, const char* alertPriority);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_property_clear_alert_priority(dnv_vista_sdk_dcl_property_t* property);
    DNV_VISTA_SDK_C_API const char* dnv_vista_sdk_dcl_property_name(const dnv_vista_sdk_dcl_property_t* property);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_property_set_name(
        dnv_vista_sdk_dcl_property_t* property, const char* name);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_property_clear_name(dnv_vista_sdk_dcl_property_t* property);
    DNV_VISTA_SDK_C_API const char* dnv_vista_sdk_dcl_property_remarks(const dnv_vista_sdk_dcl_property_t* property);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_property_set_remarks(
        dnv_vista_sdk_dcl_property_t* property, const char* remarks);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_property_clear_remarks(dnv_vista_sdk_dcl_property_t* property);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_property_set_custom_properties(
        dnv_vista_sdk_dcl_property_t* property, dnv_vista_sdk_serializable_document_t* value);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_property_clear_custom_properties(dnv_vista_sdk_dcl_property_t* property);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_property_validate(const dnv_vista_sdk_dcl_property_t* property);
    DNV_VISTA_SDK_C_API dnv_vista_sdk_dcl_configuration_reference_t* dnv_vista_sdk_dcl_configuration_reference_create(
        const char* id, dnv_vista_sdk_date_time_offset_t timeStamp);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_configuration_reference_free(
        dnv_vista_sdk_dcl_configuration_reference_t* configRef);
    DNV_VISTA_SDK_C_API const char* dnv_vista_sdk_dcl_configuration_reference_id(
        const dnv_vista_sdk_dcl_configuration_reference_t* configRef);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_configuration_reference_set_id(
        dnv_vista_sdk_dcl_configuration_reference_t* configRef, const char* id);
    DNV_VISTA_SDK_C_API const char* dnv_vista_sdk_dcl_configuration_reference_version(
        const dnv_vista_sdk_dcl_configuration_reference_t* configRef);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_configuration_reference_set_version(
        dnv_vista_sdk_dcl_configuration_reference_t* configRef, const char* version);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_configuration_reference_clear_version(
        dnv_vista_sdk_dcl_configuration_reference_t* configRef);
    DNV_VISTA_SDK_C_API dnv_vista_sdk_date_time_offset_t
    dnv_vista_sdk_dcl_configuration_reference_timestamp(const dnv_vista_sdk_dcl_configuration_reference_t* configRef);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_configuration_reference_set_timestamp(
        dnv_vista_sdk_dcl_configuration_reference_t* configRef, dnv_vista_sdk_date_time_offset_t timeStamp);