bindings/rust/vista-sdk/src/ffi/transport/datachannel/data_channel.rs


    // Format
    pub(crate) fn dnv_vista_sdk_dcl_format_create(
        type_: *const std::ffi::c_char,
    ) -> *mut dnv_vista_sdk_dcl_format_t;
    pub(crate) fn dnv_vista_sdk_dcl_format_free(format: *mut dnv_vista_sdk_dcl_format_t);
    pub(crate) fn dnv_vista_sdk_dcl_format_type(
        format: *const dnv_vista_sdk_dcl_format_t,
    ) -> *const std::ffi::c_char;
    pub(crate) fn dnv_vista_sdk_dcl_format_set_type(
        format: *mut dnv_vista_sdk_dcl_format_t,
        type_: *const std::ffi::c_char,
    ) -> i32;
    pub(crate) fn dnv_vista_sdk_dcl_format_restriction(
        format: *const dnv_vista_sdk_dcl_format_t,
    ) -> *const dnv_vista_sdk_dcl_restriction_t;
    pub(crate) fn dnv_vista_sdk_dcl_format_set_restriction(
        format: *mut dnv_vista_sdk_dcl_format_t,
        restriction: *const dnv_vista_sdk_dcl_restriction_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_format_clear_restriction(
        format: *mut dnv_vista_sdk_dcl_format_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_format_validate_value(
        format: *const dnv_vista_sdk_dcl_format_t,
        value: *const std::ffi::c_char,
        parsed_value: *mut *mut dnv_vista_sdk_iso19848_value_t,
    ) -> i32;

    // DataChannelType
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_type_create(
        type_: *const std::ffi::c_char,
    ) -> *mut dnv_vista_sdk_dcl_data_channel_type_t;
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_type_free(
        dct: *mut dnv_vista_sdk_dcl_data_channel_type_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_type_type(
        dct: *const dnv_vista_sdk_dcl_data_channel_type_t,
    ) -> *const std::ffi::c_char;
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_type_set_type(
        dct: *mut dnv_vista_sdk_dcl_data_channel_type_t,
        type_: *const std::ffi::c_char,
    ) -> i32;
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_type_has_update_cycle(
        dct: *const dnv_vista_sdk_dcl_data_channel_type_t,
    ) -> i32;
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_type_update_cycle(
        dct: *const dnv_vista_sdk_dcl_data_channel_type_t,
    ) -> f64;
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_type_set_update_cycle(
        dct: *mut dnv_vista_sdk_dcl_data_channel_type_t,
        value: f64,
    );
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_type_clear_update_cycle(
        dct: *mut dnv_vista_sdk_dcl_data_channel_type_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_type_has_calculation_period(
        dct: *const dnv_vista_sdk_dcl_data_channel_type_t,
    ) -> i32;
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_type_calculation_period(
        dct: *const dnv_vista_sdk_dcl_data_channel_type_t,
    ) -> f64;
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_type_set_calculation_period(
        dct: *mut dnv_vista_sdk_dcl_data_channel_type_t,
        value: f64,
    );
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_type_clear_calculation_period(
        dct: *mut dnv_vista_sdk_dcl_data_channel_type_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_type_is_alert(
        dct: *const dnv_vista_sdk_dcl_data_channel_type_t,
    ) -> i32;

    // NameObject
    pub(crate) fn dnv_vista_sdk_dcl_name_object_create_default(
    ) -> *mut dnv_vista_sdk_dcl_name_object_t;
    pub(crate) fn dnv_vista_sdk_dcl_name_object_create(
        naming_rule: *const std::ffi::c_char,
    ) -> *mut dnv_vista_sdk_dcl_name_object_t;
    pub(crate) fn dnv_vista_sdk_dcl_name_object_free(
        name_object: *mut dnv_vista_sdk_dcl_name_object_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_name_object_naming_rule(
        name_object: *const dnv_vista_sdk_dcl_name_object_t,
    ) -> *const std::ffi::c_char;
    pub(crate) fn dnv_vista_sdk_dcl_name_object_set_naming_rule(
        name_object: *mut dnv_vista_sdk_dcl_name_object_t,
        naming_rule: *const std::ffi::c_char,
    );
    pub(crate) fn dnv_vista_sdk_dcl_name_object_custom_name_objects(
        name_object: *const dnv_vista_sdk_dcl_name_object_t,
    ) -> *const dnv_vista_sdk_serializable_document_t;
    pub(crate) fn dnv_vista_sdk_dcl_name_object_set_custom_name_objects(
        name_object: *mut dnv_vista_sdk_dcl_name_object_t,
        value: *mut dnv_vista_sdk_serializable_document_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_name_object_clear_custom_name_objects(
        name_object: *mut dnv_vista_sdk_dcl_name_object_t,
    );

    // Unit
    pub(crate) fn dnv_vista_sdk_dcl_unit_create(
        unit_symbol: *const std::ffi::c_char,
    ) -> *mut dnv_vista_sdk_dcl_unit_t;
    pub(crate) fn dnv_vista_sdk_dcl_unit_free(unit: *mut dnv_vista_sdk_dcl_unit_t);
    pub(crate) fn dnv_vista_sdk_dcl_unit_unit_symbol(
        unit: *const dnv_vista_sdk_dcl_unit_t,
    ) -> *const std::ffi::c_char;
    pub(crate) fn dnv_vista_sdk_dcl_unit_set_unit_symbol(
        unit: *mut dnv_vista_sdk_dcl_unit_t,
        unit_symbol: *const std::ffi::c_char,
    );
    pub(crate) fn dnv_vista_sdk_dcl_unit_quantity_name(
        unit: *const dnv_vista_sdk_dcl_unit_t,
    ) -> *const std::ffi::c_char;
    pub(crate) fn dnv_vista_sdk_dcl_unit_set_quantity_name(
        unit: *mut dnv_vista_sdk_dcl_unit_t,
        quantity_name: *const std::ffi::c_char,
    );
    pub(crate) fn dnv_vista_sdk_dcl_unit_clear_quantity_name(unit: *mut dnv_vista_sdk_dcl_unit_t);
    pub(crate) fn dnv_vista_sdk_dcl_unit_set_custom_elements(
        unit: *mut dnv_vista_sdk_dcl_unit_t,
        value: *mut dnv_vista_sdk_serializable_document_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_unit_clear_custom_elements(unit: *mut dnv_vista_sdk_dcl_unit_t);

    // Property
    pub(crate) fn dnv_vista_sdk_dcl_property_create(
        data_channel_type: *const dnv_vista_sdk_dcl_data_channel_type_t,
        format: *const dnv_vista_sdk_dcl_format_t,
    ) -> *mut dnv_vista_sdk_dcl_property_t;
    pub(crate) fn dnv_vista_sdk_dcl_property_free(property: *mut dnv_vista_sdk_dcl_property_t);
    pub(crate) fn dnv_vista_sdk_dcl_property_data_channel_type(
        property: *const dnv_vista_sdk_dcl_property_t,
    ) -> *const dnv_vista_sdk_dcl_data_channel_type_t;
    pub(crate) fn dnv_vista_sdk_dcl_property_set_data_channel_type(
        property: *mut dnv_vista_sdk_dcl_property_t,
        data_channel_type: *const dnv_vista_sdk_dcl_data_channel_type_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_property_format(
        property: *const dnv_vista_sdk_dcl_property_t,
    ) -> *const dnv_vista_sdk_dcl_format_t;
    pub(crate) fn dnv_vista_sdk_dcl_property_set_format(
        property: *mut dnv_vista_sdk_dcl_property_t,
        format: *const dnv_vista_sdk_dcl_format_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_property_range(
        property: *const dnv_vista_sdk_dcl_property_t,
    ) -> *const dnv_vista_sdk_dcl_range_t;
    pub(crate) fn dnv_vista_sdk_dcl_property_set_range(
        property: *mut dnv_vista_sdk_dcl_property_t,
        range: *const dnv_vista_sdk_dcl_range_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_property_clear_range(
        property: *mut dnv_vista_sdk_dcl_property_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_property_unit(
        property: *const dnv_vista_sdk_dcl_property_t,
    ) -> *const dnv_vista_sdk_dcl_unit_t;
    pub(crate) fn dnv_vista_sdk_dcl_property_set_unit(
        property: *mut dnv_vista_sdk_dcl_property_t,
        unit: *const dnv_vista_sdk_dcl_unit_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_property_clear_unit(
        property: *mut dnv_vista_sdk_dcl_property_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_property_quality_coding(
        property: *const dnv_vista_sdk_dcl_property_t,
    ) -> *const std::ffi::c_char;
    pub(crate) fn dnv_vista_sdk_dcl_property_set_quality_coding(
        property: *mut dnv_vista_sdk_dcl_property_t,
        quality_coding: *const std::ffi::c_char,
    );
    pub(crate) fn dnv_vista_sdk_dcl_property_clear_quality_coding(
        property: *mut dnv_vista_sdk_dcl_property_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_property_alert_priority(
        property: *const dnv_vista_sdk_dcl_property_t,
    ) -> *const std::ffi::c_char;
    pub(crate) fn dnv_vista_sdk_dcl_property_set_alert_priority(
        property: *mut dnv_vista_sdk_dcl_property_t,
        alert_priority: *const std::ffi::c_char,
    );
    pub(crate) fn dnv_vista_sdk_dcl_property_clear_alert_priority(
        property: *mut dnv_vista_sdk_dcl_property_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_property_name(
        property: *const dnv_vista_sdk_dcl_property_t,
    ) -> *const std::ffi::c_char;
    pub(crate) fn dnv_vista_sdk_dcl_property_set_name(
        property: *mut dnv_vista_sdk_dcl_property_t,
        name: *const std::ffi::c_char,
    );
    pub(crate) fn dnv_vista_sdk_dcl_property_clear_name(
        property: *mut dnv_vista_sdk_dcl_property_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_property_remarks(
        property: *const dnv_vista_sdk_dcl_property_t,
    ) -> *const std::ffi::c_char;
    pub(crate) fn dnv_vista_sdk_dcl_property_set_remarks(
        property: *mut dnv_vista_sdk_dcl_property_t,
        remarks: *const std::ffi::c_char,
    );
    pub(crate) fn dnv_vista_sdk_dcl_property_clear_remarks(
        property: *mut dnv_vista_sdk_dcl_property_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_property_set_custom_properties(
        property: *mut dnv_vista_sdk_dcl_property_t,
        value: *mut dnv_vista_sdk_serializable_document_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_property_clear_custom_properties(
        property: *mut dnv_vista_sdk_dcl_property_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_property_validate(
        property: *const dnv_vista_sdk_dcl_property_t,
    ) -> i32;

    // ConfigurationReference
    pub(crate) fn dnv_vista_sdk_dcl_configuration_reference_create(
        id: *const std::ffi::c_char,
        timestamp: dnv_vista_sdk_date_time_offset_t,
    ) -> *mut dnv_vista_sdk_dcl_configuration_reference_t;
    pub(crate) fn dnv_vista_sdk_dcl_configuration_reference_free(
        config_ref: *mut dnv_vista_sdk_dcl_configuration_reference_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_configuration_reference_id(
        config_ref: *const dnv_vista_sdk_dcl_configuration_reference_t,
    ) -> *const std::ffi::c_char;
    pub(crate) fn dnv_vista_sdk_dcl_configuration_reference_set_id(
        config_ref: *mut dnv_vista_sdk_dcl_configuration_reference_t,
        id: *const std::ffi::c_char,
    );
    pub(crate) fn dnv_vista_sdk_dcl_configuration_reference_version(
        config_ref: *const dnv_vista_sdk_dcl_configuration_reference_t,
    ) -> *const std::ffi::c_char;
    pub(crate) fn dnv_vista_sdk_dcl_configuration_reference_set_version(
        config_ref: *mut dnv_vista_sdk_dcl_configuration_reference_t,
        version: *const std::ffi::c_char,
    );
    pub(crate) fn dnv_vista_sdk_dcl_configuration_reference_clear_version(
        config_ref: *mut dnv_vista_sdk_dcl_configuration_reference_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_configuration_reference_timestamp(
        config_ref: *const dnv_vista_sdk_dcl_configuration_reference_t,
    ) -> dnv_vista_sdk_date_time_offset_t;
    pub(crate) fn dnv_vista_sdk_dcl_configuration_reference_set_timestamp(
        config_ref: *mut dnv_vista_sdk_dcl_configuration_reference_t,
        timestamp: dnv_vista_sdk_date_time_offset_t,
    );
